// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toaster - Snapshots > matches snapshot for Toaster with dark theme 1`] = `
<div
  class="toaster group"
  data-testid="sonner-toaster"
  position="bottom-center"
  theme="dark"
  toastoptions="[object Object]"
/>
`;

exports[`Toaster - Snapshots > matches snapshot for Toaster with light theme 1`] = `
<div
  class="toaster group"
  data-testid="sonner-toaster"
  position="bottom-center"
  theme="light"
  toastoptions="[object Object]"
/>
`;

exports[`Toaster - Snapshots > matches snapshot for Toaster with system theme 1`] = `
<div
  class="toaster group"
  data-testid="sonner-toaster"
  position="bottom-center"
  theme="system"
  toastoptions="[object Object]"
/>
`;
